--- a/Hora_de_Codar_2/codarDois.html
+++ b/Hora_de_Codar_2/codarDois.html
@@ -92,13 +92,32 @@
         // }
         // alert("Primeiro número: " + num1 + ", Último número: " + num4 + ", Maior número: " + maiorNum);
 
-        //7. Faça um programa que leia 6 números que o usuário vai informar. Todos os números lidos com valor inferior a 72 devem ser somados. Escreva o valor final da soma efetuada e também todos valores que o usuário informou.  
-        // var num1 = parseInt(prompt("Digite o primeiro número:"));
+        //7. Faça um programa que leia 6 números que o usuário vai informar. Todos os números lidos com valor inferior a 72 devem ser somados. Escreva o valor final da soma efetuada e também todos valores que o usuário informou.
+        // var menor = 0;
+        // if(num1 < 72){
+        //     var menor = num1;
+        // }
         // var num2 = parseInt(prompt("Digite o segundo número:"));
+        // if(num2 < 72){
+        //     var menor = menor + num2;
+        // }
         // var num3 = parseInt(prompt("Digite o terceiro número:"));
+        // if(num3 < 72){
+        //     var menor = menor + num3;
+        // }
         // var num4 = parseInt(prompt("Digite o quarto número:"));
+        // if(num4 < 72){
+        //     var menor = menor + num4;
+        // }
         // var num5 = parseInt(prompt("Digite o quinto número:"));
+        // if(num5 < 72){
+        //     var menor = menor + num5;
+        // }
         // var num6 = parseInt(prompt("Digite o sexto número:"));
+        // if(num6 < 72){
+        //     var menor = menor + num6;
+        // }
+        // alert("Os valores escritos são :" + num1 + ", " + num2 + ", " + num3 + ", " + num4 + ", " + num5 + ", " + num6 + ". A somatória deu: " + menor);
 
         //8. Escreva um programa que calcule a média de quatro números informados pelo usuário, mas somente se esses números forem maiores que 0 e menores que 10. No final, se a média for maior que cinco o usuário receberá uma mensagem "Você passou no teste". Em qualquer outra situação, ele receberá uma mensagem de "tente novamente"
         // var num1 = parseInt(prompt("Digite o primeiro número:"));
@@ -141,11 +160,25 @@
         //     alert("Digite um número válido.")
         // }
         
-        //11. Uma micro calculadora
-        // Escreva um programa para ler 2 valores inteiros informados pelo usuário e uma das seguintes operações a serem
-        // executadas (codificada da seguinte forma: 1.Adição, 2.Subtração, 3.Divisão, 4.Multiplicação).
-        // O programa deve calcular e escrever o resultado dessa operação sobre os dois valores lidos. Observação: Considere
-        // que só serão lidos os valores 1, 2, 3 ou 4 para as operações
+        //11. Uma micro calculadora. Escreva um programa para ler 2 valores inteiros informados pelo usuário e uma das seguintes operações a serem executadas (codificada da seguinte forma: 1.Adição, 2.Subtração, 3.Divisão, 4.Multiplicação). O programa deve calcular e escrever o resultado dessa operação sobre os dois valores lidos. Observação: Considere que só serão lidos os valores 1, 2, 3 ou 4 para as operações
+        // var num1 = parseInt(prompt("Digite o primeiro número:"));
+        // var num2 = parseInt(prompt("Digite o segundo número:"));
+        // var operacao = prompt("Escolha uma das opções: 1.Adição, 2.Subtração, 3.Divisão, 4.Multiplicação");
+        // if(operacao == 1){
+        //     var soma = num1 + num2;
+        //     alert("O resultado é " + soma);
+        // }else if(operacao == 2){
+        //     var subt = num1 - num2;
+        //     alert("O resultado é " + subt);
+        // }else if(operacao == 3){
+        //     var divis = num1 / num2;
+        //     alert("O resultado é " + divis);
+        // }else if(operacao == 4){
+        //     var mult = num1 * num2;
+        //     alert("O resultado é " + mult);
+        // }else{
+        //     alert("Insira um valor entre 1 e 4 apenas");
+        // }
     </script>
 </head>
 <body>
