Adição da linha faltante no exercício 7
Linha que faltava no exercício 7.

--- a/Hora_de_Codar_2/codarDois.html
+++ b/Hora_de_Codar_2/codarDois.html
@@ -94,6 +94,7 @@
 
         //7. Faça um programa que leia 6 números que o usuário vai informar. Todos os números lidos com valor inferior a 72 devem ser somados. Escreva o valor final da soma efetuada e também todos valores que o usuário informou.
         // var menor = 0;
+        //var num1 = parseInt(prompt("Digite o terceiro número:"));
         // if(num1 < 72){
         //     var menor = num1;
         // }
